assets/css/creative.css
/*!
 * Start Bootstrap - Creative Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

html,
body {
    width: 100%;
    height: 100%;
    font-size: 16px;
    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
    line-height: 1.42857143;
    color: #333;
    overflow-x: hidden;
}

hr {
    max-width: 50px;
    border-color: #ffa800;
    border-width: 3px;
}

hr.light {
    border-color: #fff;
}

.noUnderline{
  color: #ffa800;
  border-bottom: none;
}

a {
    color: inherit;
    text-decoration: none;
    border-bottom: 3px solid #ffa800;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

a:hover,
a:focus {
    color: #ffa800;
    text-decoration: none;
}

.version {
  font-size: 0.8em;
  color: #aaa;
}

.underlined
{
  padding-bottom: 0.3em;
  border-bottom: 1px solid #999;
}


#about a {
  text-decoration: none;
  border-bottom: 3px solid rgba(52, 52, 52, .7);
  color: rgba(52, 52, 52, .7);
}

#about a:hover,
#about a:focus {
    color: #333333;
}

#Download
{
  color: #f0f0f0;
  background-color: #555;
}


#liveCarousel .gray
{
  color: #888;
}


.modal-dialog
{
  max-width: inherit;
}

.modal-content
{
  min-height: 550px;
  width: 80%;
  top: 5%;
  left: 10%;
}

.modal-dialog hr {
  margin: 1rem 0rem;
  max-width: none;
  border: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

h4
{
  margin-bottom: 1rem;
}

a
{
  border: none;
}

p
{
  /* margin-top: 1em; */
  font-size: 1rem;
  line-height: 1.5rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
}

h3{
    margin-bottom: 1em;
    font-size: 1.6rem;
}

p {
    margin-bottom: 20px;
    line-height: 1.5;
}

li {
    margin-bottom: 7px;
}

.tag
{
    background-color: #000;
    color: #fff;
    padding: 0em 0.2em;
}

.bold
{
  font-weight: bold;
}

.underButton
{
  margin-left: 2em;
  margin-top: 0.4em;
  color: #888;
  font-size: 14px;
}

.temporary {
  width: 12.1em;
  height: 12.1em;
  position: absolute;
  overflow: hidden;
  top: 0;
  right: 0;
  z-index: 9999;
  pointer-events: none;
  font-size: 13px;
  text-decoration: none;
  text-indent: -999999px;
}

.temporary.fixed {
  position:fixed;
  top: 0;
  z-index: 999;
}

.temporary:before, .temporary:after {
  /* The right and left classes determine the side we attach our banner to */
  position: absolute;
  display: block;
  width: 15.38em;
  height: 1.54em;

  top: 3.23em;
  right: -3.23em;

  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;

  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.temporary:before {
  content: "";

  /* Add a bit of padding to give some substance outside the "stitching" */
  padding: .38em 0;

  /* Set the base colour */
  background-color: #a00;

  /* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.15)));
  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
  background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));

  /* Add a drop shadow */
  -webkit-box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
  box-shadow: 0 .15em .23em 0 rgba(0, 0, 0, 0.5);

  pointer-events: auto;
}

.temporary:after {
  /* Set the text from the data-ribbon attribute */
  content: attr(text);

  /* Set the text properties */
  color: #fff;
  font: 700 1em "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.54em;
  text-decoration: none;
  text-shadow: 0 -.08em rgba(0, 0, 0, 0.5);
  text-align: center;
  text-indent: 0;

  /* Set the layout properties */
  padding: .15em 0;
  margin: .15em 0;
}

.temporary .lefttop {
  right: auto;
  left: 0;
}

.temporary.lefttop:before, .temporary.lefttop:after {
  right: auto;
  left: -3.23em;
}

.github-fork-ribbon.left-top:before, .github-fork-ribbon.left-top:after {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.bg-primary {
    background-color: #e89900;
}

.bg-dark {
    color: #fff;
    background-color: #222;
}

.text-faded {
    color: rgba(255,255,255,.8);
}

section {
    padding: 70px 0;
}

aside {
    padding: 50px 0;
}

.no-padding {
    padding: 0;
}

.text-center {
    text-align: center !important;
}

.navbar-default .nav > li>a,
.navbar-default .nav > li>a:focus {
        color: #333;
}

.navbar-default {
    border-bottom: 1px #222 solid;
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    transition: all .35s;
    min-height: 60px;
    padding: 0px;
    background-color: #fff;

}

.navbar-default .navbar-brand {
    text-transform: uppercase;
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    font-weight: 700;
    color: #999;
    float: left;
    height: 50px;
    padding: 15px 0px 15px 15px;
    font-size: 13px;
    line-height: 20px;
}

.navbar-default .container-fluid
{
  padding: 0px;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #999;
}

.navbar-default .nav>li>a,
.navbar-default .nav>li>a:focus {
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 700;
    color: #222;
}

.navbar-default .nav>li>a:hover,
.navbar-default .nav>li>a:focus:hover {
    color: #ffa800;
}
/* ... */

